# UCI

apache-activemq-5.18.5-bin/apache-activemq-5.18.5/data/kahadb/: db.data  db.redo  lock
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/examples/openwire/advanced-scenarios/: pom.xml
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/examples/openwire/java/: pom.xml
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-17219770841829995939/jsp/org/apache/jsp/: index_jsp.java
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-17585841294957271484/jsp/org/apache/jsp/: connections_jsp.java  index_jsp.java  network_jsp.java  queueConsumers_jsp.java  queueGraph_jsp.java  queues_jsp.java  scheduled_jsp.java  send_jsp.java  subscribers_jsp.java  topicProducers_jsp.java  topicSubscribers_jsp.java  topics_jsp.java
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-17585841294957271484/jsp/org/apache/jsp/tag/web/form/: checkbox_tag.java  escape_tag.java  option_tag.java  text_tag.java  tooltip_tag.java
apache-activemq-5.18.5-bin/apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-17585841294957271484/jsp/org/apache/jsp/xml/: subscribers_jsp.java  topics_jsp.java
apache-activemq-5.18.5/conf/: activemq.xml  groups.properties  users.properties
apache-activemq-5.18.5/data/kahadb/: db.data  db.redo  lock
apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-12124140361420680160/jsp/org/apache/jsp/: topics_jsp.java
apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-12124140361420680160/jsp/org/apache/jsp/tag/web/form/: tooltip_tag.java
apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-13185870112486429321/jsp/org/apache/jsp/: topics_jsp.java
apache-activemq-5.18.5/tmp/jetty-127_0_0_1-8161-admin-_admin-any-13185870112486429321/jsp/org/apache/jsp/tag/web/form/: tooltip_tag.java
setting up the environment/: Sin título.html  main.txt
uci/: CMakeCache.txt  CMakeLists.txt  Conf.xml  Makefile  Messages.xml  cmake_install.cmake  main.cpp  main_c.cpp
uci with Active MQ/: CMakeLists.txt  main.cpp
uci with Zero MQ/: CMakeCache.txt  CMakeLists.txt  Conf.xml  Makefile  Messages.xml  cmake_install.cmake  main p.cpp  main.cpp
(+1 files in other folders)
